MDEV-17299 Assertion `maybe_null' failed in make_sortkey